Menu icon-title spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,7 +309,7 @@ a {
 
 #container-contact {
 	position: relative;
-	width: 70%;
+	width: 60%;
 	min-height: 100vh;
 	border: 0.125rem solid #3b853f;
 	padding-top: 0.9375rem;
